# SRU_Swarm_RL

./: .gitignore  DRONE_TRAINING_USAGE.md  README.md
Indoor-topology-generation/: .gitignore  DR_Region_Guidance_Paths.npz  convert_region_paths_txt_to_npz.py  draw.py  export_safe_corridor_to_ply.py  export_static_collision_mesh_to_ply.py  generate_voxel_guidance_paths.py  knife.ply  path_utils.py  visualize_fixed_height_contact_ui.py  visualize_guidance_paths_ui.py  visualize_guidance_trajectories_ui.py
Indoor-topology-generation/output/fixed_height_validation/: fixed_height_contact_full.json
Indoor-topology-generation/output/fixed_height_validation/fixed_height_contact_full_points/: 0000_00_01_36_Flightsite_11_to_34_Flightsite_9.npz  0001_00_02_36_Flightsite_11_to_33_Flightsite_8.npz  0002_00_03_36_Flightsite_11_to_31_Flightsite_6.npz  0003_00_04_36_Flightsite_11_to_35_Flightsite_10.npz  0004_00_05_36_Flightsite_11_to_30_Flightsite_5.npz  0005_00_06_36_Flightsite_11_to_29_Flightsite_4.npz  0006_00_07_36_Flightsite_11_to_28_Flightsite_3.npz  (+1121 more)
Indoor-topology-generation/region_paths_txt/: all_safe_corridors.ply  safe_corridor_0_15.ply
Indoor-topology-generation/voxel_guidance_ros2/: .gitignore  CMakeLists.txt  README.md  package.xml
Indoor-topology-generation/voxel_guidance_ros2/include/TrajectoryOptComponents/: LinearTimeCost.hpp  PenaltyIntegralCost.hpp  PolytopeSpatialMap.hpp  SFCCommonTypes.hpp
Indoor-topology-generation/voxel_guidance_ros2/include/gcopter/: flatness.hpp  spline_sfc_optimizer.hpp
Indoor-topology-generation/voxel_guidance_ros2/src/: voxel_guidance_node.cpp
scripts/: inspect_swarm_depth.py  train_nav.sh
sru-navigation-learning/rsl_rl/modules/: actor_critic_sru.py
sru-navigation-learning/rsl_rl/runners/: on_policy_runner.py
sru-navigation-sim/docs/: DRONE_TRAINING_DEFAULTS.md  README.md
sru-navigation-sim/isaaclab_nav_task/navigation/: swarm_navigation_env.py
sru-navigation-sim/scripts/: play.py  train.py
sru-pytorch-spatial-learning/: .gitignore  IMPORT_EXAMPLES.md  LICENSE  README.md  pyproject.toml  run_pointcloud.py  setup.py  visualize_pointobs.py
sru-pytorch-spatial-learning/dataloader/: points_dataset.py  spiral_dataset.py
sru-pytorch-spatial-learning/network/: __init__.py
sru-pytorch-spatial-learning/network/s4_utils/: s4d.py  s4d_net.py
sru-pytorch-spatial-learning/params/: pointcloud.yaml
sru-pytorch-spatial-learning/utils/: ego_centric_shift.py  load_weight.py  visualization.py
(+11 files in other folders)
