[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sru-pytorch"
version = "1.0.0"
description = "PyTorch implementation of Spatially-Enhanced Recurrent Units (SRU) with LSTM, and GRU variants"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fan Yang", email = "fanyang1@ethz.ch"}
]
keywords = ["sru", "pytorch", "recurrent", "lstm", "gru", "spatial-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://michaelfyang.github.io/sru-project-website/"
Repository = "https://github.com/leggedrobotics/sru-pytorch-spatial-learning"
Documentation = "https://michaelfyang.github.io/sru-project-website/"

[tool.setuptools]
packages = ["network", "dataloader", "utils"]
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
